WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100733
3d rotation with [0, 0, 0] direction vector should not be applied
https://bugs.webkit.org/show_bug.cgi?id=100733
Summary
3d rotation with [0, 0, 0] direction vector should not be applied
Zoltan Nyul
Reported
2012-10-30 01:09:37 PDT
A direction vector that cannot be normalized, such as [0, 0, 0], will cause the rotation to not be applied, but webkit applies it with [1, 0, 0] direction vector.
Attachments
patch
(4.88 KB, patch)
2012-10-30 01:19 PDT
,
Zoltan Nyul
no flags
Details
Formatted Diff
Diff
patch
(4.91 KB, patch)
2012-10-30 01:35 PDT
,
Zoltan Nyul
no flags
Details
Formatted Diff
Diff
Changelog fixed
(4.90 KB, patch)
2012-10-30 01:40 PDT
,
Zoltan Nyul
no flags
Details
Formatted Diff
Diff
patch
(5.01 KB, patch)
2012-10-30 01:55 PDT
,
Zoltan Nyul
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Nyul
Comment 1
2012-10-30 01:19:52 PDT
Created
attachment 171391
[details]
patch
Chris Dumez
Comment 2
2012-10-30 01:25:26 PDT
Comment on
attachment 171391
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171391&action=review
> LayoutTests/ChangeLog:8 > + Addig test for 3d rotation with [0, 0, 0] direction vector.
"Addig" -> "Add"
> Source/WebCore/ChangeLog:8 > + A direction vector that cannot be normalized, such as [0, 0, 0], will cause the rotation to not be applied,
Is there a clear mention of this in the spec? If so, we should probably point to it to justify this change.
> Source/WebCore/ChangeLog:11 > + No new tests (OOPS!).
Please state that it is covered by transforms/3d/general/3dtransform-values.html test case.
Zoltan Nyul
Comment 3
2012-10-30 01:28:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 171391
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=171391&action=review
> > > LayoutTests/ChangeLog:8 > > + Addig test for 3d rotation with [0, 0, 0] direction vector. > > "Addig" -> "Add" > > > Source/WebCore/ChangeLog:8 > > + A direction vector that cannot be normalized, such as [0, 0, 0], will cause the rotation to not be applied, > > Is there a clear mention of this in the spec? If so, we should probably point to it to justify this change.
Yes, here,
http://dev.w3.org/csswg/css3-3d-transforms/
in the "8. The Transformation Functions".
> > > Source/WebCore/ChangeLog:11 > > + No new tests (OOPS!). > > Please state that it is covered by transforms/3d/general/3dtransform-values.html test case.
Ok
Zoltan Nyul
Comment 4
2012-10-30 01:35:05 PDT
Created
attachment 171396
[details]
patch
Chris Dumez
Comment 5
2012-10-30 01:37:04 PDT
Comment on
attachment 171396
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171396&action=review
> LayoutTests/ChangeLog:8 > + Addig test for 3d rotation with [0, 0, 0] direction vector.
"Addig" -> "Add"
> Source/WebCore/ChangeLog:8 > + A direction vector that cannot be normalized, such as [0, 0, 0], will cause the rotation to not be applied,
Is this stated clearly in the spec, if so, you should point to it.
Zoltan Nyul
Comment 6
2012-10-30 01:40:12 PDT
Created
attachment 171398
[details]
Changelog fixed
Zoltan Nyul
Comment 7
2012-10-30 01:55:51 PDT
Created
attachment 171400
[details]
patch
Chris Dumez
Comment 8
2012-10-30 02:11:25 PDT
Comment on
attachment 171400
[details]
patch LGTM.
Levi Weintraub
Comment 9
2012-10-30 02:39:03 PDT
Comment on
attachment 171400
[details]
patch LGTM.
WebKit Review Bot
Comment 10
2012-10-30 02:44:06 PDT
Comment on
attachment 171400
[details]
patch Clearing flags on attachment: 171400 Committed
r132886
: <
http://trac.webkit.org/changeset/132886
>
WebKit Review Bot
Comment 11
2012-10-30 02:44:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug