3d rotation with [0, 0, 0] direction vector should not be applied https://bugs.webkit.org/show_bug.cgi?id=100733

Patch by Zoltan Nyul <zoltan.nyul@intel.com> on 2012-10-30
Reviewed by Levi Weintraub.

Source/WebCore:

As stated in the specification (http://dev.w3.org/csswg/css3-3d-transforms/#transform-functions),
a direction vector that cannot be normalized, such as [0, 0, 0], will cause the rotation to not be applied,
but webkit applies it with [1, 0, 0] direction vector.

Test: transforms/3d/general/3dtransform-values.html

* platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::TransformationMatrix::rotate3d):

LayoutTests:

Add test for 3d rotation with [0, 0, 0] direction vector.

* transforms/3d/general/3dtransform-values-expected.txt:
* transforms/3d/general/3dtransform-values.html:

Canonical link: https://commits.webkit.org/118770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132886 268f45cc-cd09-0410-ab3c-d52691b4dbfc